--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -22,9 +23,14 @@
     "expo-status-bar": "~1.4.4",
     "react": "^18.2.0",
     "react-native": "^0.71.8",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-maps": "^1.7.1",
     "react-native-svg": "^13.9.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.1"
   },
   "devDependencies": {
