--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.5",
     "date-fns": "^2.30.0",
     "expo": "~48.0.18",
     "expo-camera": "^13.2.1",
@@ -21,6 +22,7 @@
     "expo-location": "^15.1.1",
     "expo-media-library": "^15.2.3",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^10.3.1",
     "react": "^18.2.0",
     "react-native": "^0.71.8",
     "react-native-camera": "^4.2.1",
